Java 9 fix: add java.xml.bind module back to classpath :wrench: